ER 1008 - Sonar Cube and SonarLInt integration
Actual Change Detail:
- Added sonar cube server required details in pom.xml
- Updated the color codes for tag comments, and added REF tag in the list
- updated few of the comments in patient and insurance service impl classes.